fix: status macro break only with spaces

--- a/src/assets/scss/_status.scss
+++ b/src/assets/scss/_status.scss
@@ -14,7 +14,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  word-break: break-all;
+  white-space: normal;
 }
 
 .aui-lozenge-success {
